# music_speaker

./: CMakeLists.txt  test.db
src/: main.cpp
